# youtube-comment-sa

./: README.md  pyproject.toml  requirements.txt  scraping.py
notebooks/: annotation_with_indo_sentiment_models.ipynb  format_conversion.ipynb  yt-comments-sentiment-analysis.ipynb
